# cmdstd

./: .gitignore  package-lock.json  package.json  reorganize_nodes.py
apps/workflow-engine/: .gitignore  API.md  API_GUIDE.md  PROPOSAL_INPUT_SCHEMA.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  workflows.db
apps/workflow-engine/docs/: BOARD_PRESENTATION.md  EXECUTIVE_SUMMARY.md  adding-seed-workflows.md  llm-provider-fixes-guide.py  llm-provider-integration-guide.py
apps/workflow-engine/scripts/: mock-llm-server.py  mock-llm-server.ts  pandas_explore.py
apps/workflow-engine/src/: __init__.py  index.ts  main.py  types.ts
apps/workflow-engine/src/core/: __init__.py  config.py  dependencies.py  exceptions.py
apps/workflow-engine/src/db/: __init__.py  models.py  seed.py  session.py
apps/workflow-engine/src/engine/: ExpressionEngine.ts  NodeRegistry.ts  WorkflowRunner.ts  WorkflowValidator.ts  __init__.py  expression_engine.py  llm_provider.py  nodeSchema.ts  node_registry.py  types.py  types.ts  workflow_runner.py
apps/workflow-engine/src/nodes/: AIAgent.ts  BaseNode.ts  Code.ts  Cron.ts  ErrorTrigger.ts  HTMLDisplay.ts  HttpRequest.ts  If.ts  LLMChat.ts  Merge.ts  PandasExplore.ts  ReadFile.ts  Set.ts  SplitInBatches.ts  Start.ts  Switch.ts  Wait.ts  Webhook.ts  __init__.py  ai_agent.py  (+37 more)
apps/workflow-engine/tests/: conditional-flows.test.ts  error-handling.test.ts  execution-history.test.ts  http-llm-tools.test.ts  merge-parallel.test.ts  node-chaining.test.ts  nodes.test.ts  setup.ts  verify_parallel.py  workflows.test.ts
(+270 files in other folders)
